# imagisSRM

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
AuxFolders/: 2.16.840.1.113662.4.8796818069641.798806497.93296077602350.10.dcm
AuxFolders/PDF/: reporte  uuuu  weewr
AuxFolders/Pending/: 2.16.840.1.113662.4.8796818069641.798806497.93296077602350.10.dst
AuxFolders/Templates/: template.xml
CORE/: imgSRCstore.cpp  imgSRCstore.h  imgSRDataSetHandler.cpp  imgSRDataSetHandler.h  utils.h
GUI/: imgPendingFileHandler.cpp  imgPendingFileHandler.h  imgSRWidget.cpp  imgSRWidget.h  imgSRWidget.ui  imgSendThread.cpp  imgSendThread.h  imgSideWidgetElement.cpp  imgSideWidgetElement.h  imgSideWidgetElement.ui  imgXMLMaker.cpp  imgXMLMaker.h
